--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = ">=3.8, <=3.13"
 flask = "^2.3.3"
 flask-cors = "^4.0.0"
+ffmpeg = "^1.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
