--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   wav2liphq:
     build:
       context: .
-      dockerfile: Dockerfile.wav2liphq
+      dockerfile: wav2liphq/Dockerfile.wav2liphq
     volumes:
       - data-volume:/app/wav2lip-hq
       
