--- a/backend/docker/Dockerfile.backend
+++ b/backend/docker/Dockerfile.backend
@@ -4,12 +4,15 @@ FROM pytorch/pytorch:1.8.1-cuda11.1-cudnn8-runtime
 # Set the working directory in the container
 WORKDIR /backend
 
+# Install backend dependencies
+RUN pip install poetry
+COPY backend .
+RUN poetry config virtualenvs.create false && poetry install --no-interaction --no-ansi
+
 # Install system dependencies and clean up
 RUN apt-get update && apt-get install -y git wget && \
     rm -rf /var/lib/apt/lists/*
 
-# Clone the Wav2Lip-HQ repository
-RUN git clone https://github.com/Markfryazino/wav2lip-hq.git
 
 # Change to the Wav2Lip-HQ directory
 WORKDIR /backend/wav2lip-hq
@@ -33,13 +36,8 @@ RUN chmod +x download_models.py && \
 # Create directories for input and output videos
 RUN mkdir -p videos results
 
-# Install backend dependencies
-RUN pip3 install poetry
-COPY backend /backend
-WORKDIR /backend
-RUN poetry config virtualenvs.create false && poetry install --no-interaction --no-ansi
-
 # Set the entrypoint to the Flask app
+WORKDIR /backend
 ENTRYPOINT ["python", "app.py"]
 
 # Expose the default port for Flask
