--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -7,7 +7,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://lipsync-backend:5000;
+        proxy_pass http://backend:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
