--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,10 +6,11 @@ authors = ["Kyle Cain <kylecain.me@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.8.0,<3.9.0"
+python = ">=3.8.0"
 flask = "^2.3.3"
 flask-cors = "^4.0.0"
 ffmpeg = "^1.4"
+gunicorn = "^21.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
