--- a/backend/docker/Dockerfile.backend
+++ b/backend/docker/Dockerfile.backend
@@ -1,6 +1,8 @@
 # Use an official CUDA-enabled PyTorch image as the base image
 FROM pytorch/pytorch:1.8.1-cuda11.1-cudnn8-runtime
 ENV DEBIAN_FRONTEND=noninteractive
+ENV NVIDIA_VISIBLE_DEVICES=all
+ENV NVIDIA_DRIVER_CAPABILITIES=all
 
 # Set the working directory in the container
 WORKDIR /backend
